# Hack-Nation

./: .gitignore  CHALLENGE_PATTERNS.md  DEMO_SCRIPT.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: compiler.py  compiler_v2.py  config.py  db.py  intent.py  json_utils.py  knowledge.py  llm.py  llm_protocol_parser.py  main.py  plan_compiler.py  prompts.py  protocol_cache.py  protocol_parser.py  run_store.py  sop_improvement.py  store.py  tavily_search.py  validator.py  vector_store.py
backend/knowledge/internal/: controlled_rate_freezer_manual.md  hela_cell_culture_sop.md  lab_facility_constraints.md  mammalian_cell_freezing_sop.md  prior_run_001.json  prior_run_002.json  prior_run_003.json  viability_assay_runbook.md
frontend/: .env.example  .gitignore  jsconfig.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js
frontend/src/routes/: +layout.js  +page.svelte
fulcrum/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
fulcrum/app/: globals.css  layout.tsx  page.tsx
fulcrum/app/compile/: page.tsx
fulcrum/app/demo/: page.tsx
fulcrum/components/: CompilingOverlay.tsx  ExecutionWorkspace.tsx  HypothesisInput.tsx  IntentCard.tsx  KnowledgeUpload.tsx  LiteratureQC.tsx  Masthead.tsx  PlanTabs.tsx  SopMatchPanel.tsx  StepInspector.tsx  Trace.tsx  WorkflowStepper.tsx  WorkflowSummary.tsx
fulcrum/lib/: api.ts  display.ts  mock-workflow.ts  samples.ts
fulcrum/types/: index.ts
(+15 files in other folders)
